# Chatbot-Engine

./: .gitignore  CMakeLists.txt  README.md
scripts/: chatbot1.json  chatbot2.json
src/: main.cpp
src/engine/: ChatbotEngine.cpp  ChatbotEngine.hpp
src/instructions/: GotoInstruction.cpp  GotoInstruction.hpp  IfInstruction.cpp  IfInstruction.hpp  InputInstruction.cpp  InputInstruction.hpp  Instruction.hpp  InstructionFactory.cpp  InstructionFactory.hpp  MessageInstruction.cpp  MessageInstruction.hpp
src/logic/: ConditionEvaluator.cpp  ConditionEvaluator.hpp  RestrictionEvaluator.cpp  RestrictionEvaluator.hpp
src/session/: ChatbotSession.cpp  ChatbotSession.hpp
src/utils/: Condition.hpp  Restriction.hpp  SmartValue.hpp
